    twice.
  * Stop building the native compilers on hppa, they are buggy and upstream
    considers this port dead (see bug#342704).

  [ Samuel Mimram ]
  * Added for_pack_static.dpatch (from CVS) to correct a bug when linking.
  * Added myself to uploaders.

  [ Julien Cristau ]
  * Disable for_pack_static.dpatch for now, as it breaks the ABI.

 -- Julien Cristau <julien.cristau@ens-lyon.org>  Mon, 19 Dec 2005 13:13:31 +0100

ocaml (3.09.0-3) unstable; urgency=low

  * Fix build on non-native arches which was broken by the changes to
    debian/rules in the previous release. Sorry for this :(

 -- Julien Cristau <julien.cristau@ens-lyon.org>  Fri,  9 Dec 2005 11:01:06 +0100

ocaml (3.09.0-2) unstable; urgency=low

  * Modified debian/rules to exit with an error when native compiler build
    fails, instead of building a broken package.
  * New patch kbsd-gnu.dpatch to add support for GNU/Hurd and GNU/k*BSD on
    i386 (thanks to Robert Millan and Aurélien Jarno; Closes: #216886).
  * Add myself to Uploaders (acked by Sven).
  * Add patch by Steve Langasek <vorlon@debian.org> to fix native code linking
    by passing the --no-relax option to ld (Closes: #338437).
    Bug#335578 stays open since a proper fix to the generated asm would still
    be better than this workaround.

 -- Julien Cristau <julien.cristau@ens-lyon.org>  Thu,  8 Dec 2005 10:19:39 +0100

ocaml (3.09.0-1) unstable; urgency=low

  * New upstream release.
    - self references are now ruled out (Closes: #263163, #294753)
    - better escaping in manpages generated by ocamldoc (Closes: #301046)
    - typo fixed in ocamldoc.1 (Closes: #304360)
    - argument order changed in Map.fold (Closes: #327211)

  [ Julien Cristau ]
  * Cleanup debian/control: remove redundant Depends.
  * Update location of ocaml-md5sums stuff.
  * Build-Depend on chrpath and delete rpath from DLLs.
  * Various lintian warnings fixed, and overrides cleaned up.

  [ Sven Luther ]
  * Updated to new upstream release.